kubernetes/apps/external-endpoints/services/app/truenas/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.36.0/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: &app truenas
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      url: "http://10.10.99.100"
      group: homelab
      interval: 1m
      ui:
        hide-hostname: true
        hide-url: true
      conditions:
        - "[STATUS] == 200"
spec:
  clusterIP: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
      appProtocol: http
